--- a/CR/CR.tex
+++ b/CR/CR.tex
@@ -382,7 +382,7 @@ REAPPARAITRAIENT, REAPPARAITRAIENT\end{lstlisting}
 
 
 
-\section{Gestion de projet} Dans un premier temps, nous avons tous bien lu le sujet et bien compris les enjeux. Nous avons alors utilisé les séances 4 et 5 pour decomposer le projet en différentes lot (dont on retrouve la décomposition en figure~\ref{fig:WBS}), de se répartir les tâches et commencer le projet tous ensemble. La répartition des tâches se trouve sur la matrice RACI en figure~\ref{fig:RACI} .Cela nous a permis de finir les 2 premiers programmes rapidement. Nous avons aussi été aidé par M. Slim Hammadi, notamment lorsque nous étions bloqué au programme 2, sur la comprehension du sujet d’un point technique. Nous ne comprenions pas exactement ce qu’il fallait mettre dans les maille de l'arbre (entre autres la liste des mots regroupés par signature). Nous avons chacun fini nos tâches à faire pour la rentrée et nous avons alors pu faire une mise en commun de travail et vérifier que tout fonctionne correctement.
+\section{Gestion de projet} Dans un premier temps, nous avons tous bien lu le sujet et bien compris les enjeux. Nous avons alors utilisé les séances 4 et 5 pour décomposer le projet en différents lots (dont on retrouve la décomposition en figure~\ref{fig:WBS}), de se répartir les tâches et commencer le projet tous ensemble. La répartition des tâches se trouve sur la matrice RACI en figure~\ref{fig:RACI}. Cela nous a permis de finir les 2 premiers programmes rapidement. Nous avons aussi été aidé par M. Slim Hammadi, notamment lorsque nous étions bloqués au programme 2, sur la compréhension du sujet d'un point technique. Nous ne comprenions pas exactement ce qu'il fallait mettre dans les mailles de l'arbre (entre autres la liste des mots regroupés par signature). Nous avons chacun fini nos tâches à faire pour la rentrée et nous avons alors pu faire une mise en commun de travail et vérifier que tout fonctionne correctement.
 
 
 \begin{figure}[H]
